tests/toy/neg/001542_mutation.toylang
program a = { var while : bool; } .
